added webinar info

--- a/webinars/index.html
+++ b/webinars/index.html
@@ -33,7 +33,7 @@
 
     <!-- mys stylesheets -->
     <link rel="stylesheet" href="../assets/css/styles.css">
-    <link rel="stylesheet" href="../assets/css/webinars/webinars.css?v-2">
+    <link rel="stylesheet" href="../assets/css/webinars/webinars.css">
     <link rel="stylesheet" href="../assets/css/responsive.css">
     <link rel="stylesheet" href="../assets/css/webinars/webinars-re.css">
     
@@ -163,9 +163,44 @@
 
                     </div>
                     <hr>
-                    <div class="videos">
+                    <div class="webinars-archived">
+                        <div class="webinar-wrap">
+                            <h2>May 27:  Ending the HIV Epidemic in Texas: The Role of Healthcare Providers</h2>
+                            <div class="links">
+                            <p><i class="fas fa-play-circle"></i> <a href="https://vimeo.com/566182168" target="_blank">Presentation Video</a></p>
+                            <p><i class="far fa-file-powerpoint"></i> <a href="../assets/files/webinars/presentations/may27.pdf" target="_blank">Slides</a></p>
+                            </div>
+                        </div>
+                        <div class="webinar-wrap">
+                            <h2>June 8:  Implementing Routine HIV Screening in Texas Emergency Departments</h2>
+                            <div class="links">
+                            <p><i class="fas fa-play-circle"></i> <a href="https://vimeo.com/560594807" target="_blank">Presentation Video</a></p>
+                            <p><i class="far fa-file-powerpoint"></i> <a href="../assets/files/webinars/presentations/June8.pdf" target="_blank">Slides</a></p>
+                            </div>
+                        </div>
+                        <div class="webinar-wrap">
+                            <h2>June 10:  Fighting HIV Stigma to End the HIV Epidemic: Evidence Based Solutions for Healthcare in Texas</h2>
+                            <div class="links">
+                            <p><i class="fas fa-play-circle"></i> <a href="https://vimeo.com/566182168" target="_blank">Presentation Video</a></p>
+                            <p><i class="far fa-file-powerpoint"></i> <a href="../assets/files/webinars/presentations/june10.pdf" target="_blank">Slides</a></p>
+                            </div>
+                        </div>
+                        <div class="webinar-wrap">
+                            <h2>June 16:  A Status Neutral Approach: Redefining HIV Prevention and Care in Texas Healthcare Setting</h2>
+                            <div class="links">
+                            <p><i class="fas fa-play-circle"></i> <a href="https://vimeo.com/566182106" target="_blank">Presentation Video</a></p>
+                            <p><i class="far fa-file-powerpoint"></i> <a href="../assets/files/webinars/presentations/june16.pdf" target="_blank">Slides</a></p>
+                            </div>
+                        </div>
+                        <div class="webinar-wrap">
+                            <h2>June 22: Critical Partnerships to Ensure Successful Routine HIV Screening Programs in Healthcare Settings and Linkage to HIV Medical Care</h2>
+                            <div class="links">
+                            <p><i class="fas fa-play-circle"></i> <a href="#" target="_blank">Presentation Video</a></p>
+                            <p><i class="far fa-file-powerpoint"></i> <a href="../assets/files/webinars/presentations/june22.pdf" target="_blank">Slides</a></p>
+                            </div>
+                        </div>
 
-                        <div class="webinar-vid">
+                        <!-- <div class="webinar-vid">
                             <h2>Video of May 27 Webinar: </h2> 
                             <div class="vid-wrap">
                                 <iframe src="https://player.vimeo.com/video/560004342"  frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
@@ -177,7 +212,7 @@
                             <div class="vid-wrap">
                                 <iframe src="https://player.vimeo.com/video/560594807"  frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
 
 
