--- a/index.html
+++ b/index.html
@@ -115,6 +115,13 @@
                         <div class="col-lg-8 col-md-12 align-self-center">
                             <h1>The Texas Collaborative for HIV Education and Prevention (TCHEP)</h1>
                             <h2>Together We Can End the HIV Epidemic in Texas</h2>
+                            <hr>
+                            <p>
+                                Are you a medical provider (MD, DO, NP, PA) practicing in primary or
+                                emergency care settings in Texas? Please take a part in short survey on HIV
+                                prevention practices. Respondents receive a $5.00 Starbucks gift card. <a target="_blank" href="https://utsystempophealth.sjc1.qualtrics.com/jfe/form/SV_2bFiZPoKUG4IhJH">Take the Survey</a>
+                            </p>
+
                         </div>
                         
                         <!-- <div class="col-lg-4 col-sm-6 col-md-8 overview-ad">
