--- a/webinars/index.html
+++ b/webinars/index.html
@@ -116,7 +116,7 @@
                 
                     <div class="actions">
                         <div class="pc-series series">
-                            <h2>Learning Series of <span>Healthcare Providers</span></h2>
+                            <h2>HIV Prevention Learning Series for Healthcare Providers</h2>
                             <div class="buttons">
                                 <a href="../assets/files/webinars/tchep_schedule-6-21.pdf" target="_blank">
                                     <div class="icon">
