--- a/initiatives/index.html
+++ b/initiatives/index.html
@@ -137,8 +137,16 @@
                         </div>
                         <div class="init-info">
                             <h2 id="surveys">Surveys</h2>
+                            <p>
+                                Are you a medical provider (MD, DO, NP, PA) practicing in primary or
+                                emergency care settings in Texas? Please take a part in short survey on HIV
+                                prevention practices. Respondents receive a $5.00 Starbucks gift card.
+                            </p>
+                            <p>
+                                <a href="https://utsystempophealth.sjc1.qualtrics.com/jfe/form/SV_2bFiZPoKUG4IhJH"> Take the Survey</a>
+                            </p>
 
-                            <p>TCHEP will conduct an evaluation of HIV prevention education in medical schools and current HIV testing and prevention practices in healthcare settings in Texas.</p>
+                            <!-- <p>TCHEP will conduct an evaluation of HIV prevention education in medical schools and current HIV testing and prevention practices in healthcare settings in Texas.</p>
 
                             <ul class="">
                             <li>
@@ -147,7 +155,7 @@
 
                             <li>
                                 <strong>Survey</strong> will be conducted to characterize current standard of care for HIV testing, linkage to care, and prevention practices in primary and emergency care settings in Texas. The results of the survey will inform HIV screening and prevention process improvement.
-                            </li>
+                            </li> -->
                             </ul>
                         </div>
                     </div>
