--- a/initiatives/index.html
+++ b/initiatives/index.html
@@ -139,11 +139,11 @@
                             <h2 id="surveys">Surveys</h2>
                             <p>
                                 Are you a medical provider (MD, DO, NP, PA) practicing in primary or
-                                emergency care settings in Texas? Please take a part in short survey on HIV
+                                emergency care settings in Texas? Please take part in a short survey on HIV
                                 prevention practices. Respondents receive a $5.00 Starbucks gift card.
                             </p>
                             <p>
-                                <a href="https://utsystempophealth.sjc1.qualtrics.com/jfe/form/SV_2bFiZPoKUG4IhJH"> Take the Survey</a>
+                                <a href="https://utsystempophealth.sjc1.qualtrics.com/jfe/form/SV_3gsVcPM1MZRm6Lc"> Take the Survey</a>
                             </p>
 
                             <!-- <p>TCHEP will conduct an evaluation of HIV prevention education in medical schools and current HIV testing and prevention practices in healthcare settings in Texas.</p>
