--- a/index.html
+++ b/index.html
@@ -112,14 +112,14 @@
             <div class="banner">
                 <div id="intro-row" class="home-row d-flex flex-column justify-content-center">
                     <div class=" d-flex justify-content-center">
-                        <div class="col-lg-8 col-md-12 align-self-center">
+                        <div class="col-lg-10 col-md-12 align-self-center">
                             <h1>The Texas Collaborative for HIV Education and Prevention (TCHEP)</h1>
                             <h2>Together We Can End the HIV Epidemic in Texas</h2>
                             <hr>
                             <p>
                                 Are you a medical provider (MD, DO, NP, PA) practicing in primary or
-                                emergency care settings in Texas? Please take a part in short survey on HIV
-                                prevention practices. Respondents receive a $5.00 Starbucks gift card. <a target="_blank" href="https://utsystempophealth.sjc1.qualtrics.com/jfe/form/SV_2bFiZPoKUG4IhJH">Take the Survey</a>
+                                emergency care settings in Texas? Please take part in a short survey on HIV
+                                prevention practices. Respondents receive a $5.00 Starbucks gift card. <a target="_blank" href="https://utsystempophealth.sjc1.qualtrics.com/jfe/form/SV_3gsVcPM1MZRm6Lc">Take the Survey</a>
                             </p>
 
                         </div>
