--- a/webinars/index.html
+++ b/webinars/index.html
@@ -184,7 +184,29 @@
                             <p><i class="far fa-file-powerpoint"></i> <a href="../assets/files/webinars/presentations/june22.pdf" target="_blank">Slides</a></p>
                             </div>
                         </div>
+                        <div class="webinar-wrap">
+                            <h2>June 23: Biomedical HIV Prevention Strategies - PrEP and nPEP</h2>
+                            <div class="links">
+                            <p><i class="fas fa-play-circle"></i> <a href="https://vimeo.com/570415500" target="_blank">Presentation Video</a></p>
+                            <p><i class="far fa-file-powerpoint"></i> <a href="../assets/files/webinars/presentations/june23.pdf" target="_blank">Slides</a></p>
+                            </div>
+                        </div>
+                        
+                        <div class="webinar-wrap">
+                            <h2>June 30: Cultural Humility: Improving Patient Trust and Health Outcomes</h2>
+                            <div class="links">
+                            <p><i class="fas fa-play-circle"></i> <a href="https://vimeo.com/571271956" target="_blank">Presentation Video</a></p>
+                            <p><i class="far fa-file-powerpoint"></i> <a href="../assets/files/webinars/presentations/june30.pdf" target="_blank">Slides</a></p>
+                            </div>
+                        </div>
 
+                        <div class="webinar-wrap">
+                            <h2>July 1: Strategies to Support PrEP and Other HIV Prevention Services in Primary Care</h2>
+                            <div class="links">
+                            <p><i class="fas fa-play-circle"></i> <a href="https://vimeo.com/570416303" target="_blank">Presentation Video</a></p>
+                            <p><i class="far fa-file-powerpoint"></i> <a href="../assets/files/webinars/presentations/july1.pdf" target="_blank">Slides</a></p>
+                            </div>
+                        </div>
                         <!-- <div class="webinar-vid">
                             <h2>Video of May 27 Webinar: </h2> 
                             <div class="vid-wrap">
