--- a/webinars/index.html
+++ b/webinars/index.html
@@ -207,6 +207,14 @@
                             <p><i class="far fa-file-powerpoint"></i> <a href="../assets/files/webinars/presentations/july1.pdf" target="_blank">Slides</a></p>
                             </div>
                         </div>
+
+                        <div class="webinar-wrap">
+                            <h2>July 14:  Financial Benefits and Barriers to Routine HIV Screening in Emergency Departments: Best Practices in Texas</h2>
+                            <div class="links">
+                            <p><i class="fas fa-play-circle"></i> <a href="https://vimeo.com/575445764" target="_blank">Presentation Video</a></p>
+                            <p><i class="far fa-file-powerpoint"></i> <a href="../assets/files/webinars/presentations/july14.pdf" target="_blank">Slides</a></p>
+                            </div>
+                        </div>
                         <!-- <div class="webinar-vid">
                             <h2>Video of May 27 Webinar: </h2> 
                             <div class="vid-wrap">
